--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,17 @@
         android:layout_width="match_parent"
         android:layout_marginTop="350dp"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_mensagem"
+        android:text="Enviar mensagem"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginBottom="20dp"
+        android:layout_height="65dp"
+        android:elevation="100dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"/>
+
 
 
 
