--- a/app/src/main/res/layout/fragment_criar_conta.xml
+++ b/app/src/main/res/layout/fragment_criar_conta.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,117 +8,175 @@
     android:orientation="vertical"
     tools:context=".CriarContaFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_create"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:textSize="20dp"
-        android:text="Create your account"
-        android:layout_marginTop="20dp"
-        />
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/imgb_arrow"
+            android:layout_width="77dp"
+            android:layout_height="47dp"
+            android:background="@color/white"
+            android:scaleType="centerCrop"
+            android:src="@drawable/arrow">
 
-    <EditText
-        android:id="@+id/et_nome"
-        android:elevation="5dp"
-        android:hint="Nome"
-        android:inputType="textPersonName"
+        </androidx.appcompat.widget.AppCompatImageButton>
 
-        android:padding="5dp"
-        android:shadowColor="@color/black"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"/>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_uteethlogo"
+            android:layout_width="wrap_content"
+            android:layout_height="63dp"
+            android:layout_marginTop="5dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/uteeth_png"
+            tools:ignore="MissingConstraints" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_undraw"
+            android:layout_width="wrap_content"
+            android:layout_height="137dp"
+            android:layout_marginBottom="20dp"
+            app:srcCompat="@drawable/undraw_png"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/tv_create"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/poppinssemibold"
+            android:text="Create your account"
+            android:layout_marginTop="20dp"
+            />
+
+        <EditText
+            android:id="@+id/et_nome"
+            style="@style/edit_text"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppinsmedium"
+            android:hint="Name"
+            android:inputType="textPersonName"
+
+            android:padding="5dp"
+            android:shadowColor="@color/black">
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/et_email"
+            style="@style/edit_text"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppinsmedium"
+            android:hint="E-mail"
+            android:inputType="textWebEmailAddress"
+
+            android:padding="5dp"
+            android:shadowColor="@color/black">
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/et_password"
+            style="@style/edit_text"
+            android:fontFamily="@font/poppinsmedium"
+            android:padding="5dp"
+            android:shadowColor="@color/black"
+            android:elevation="5dp"
+            android:hint="Password"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/black"
+            android:inputType="textPassword"
+            >
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/et_telefone_create"
+            style="@style/edit_text"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppinsmedium"
+            android:hint="Phone"
+            android:inputType="number"
+
+            android:padding="5dp"
+            android:shadowColor="@color/black">
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/et_address1"
+            style="@style/edit_text"
+            android:fontFamily="@font/poppinsmedium"
+            android:padding="5dp"
+            android:shadowColor="@color/black"
+            android:elevation="5dp"
+
+            android:hint="Adress 1">
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/et_address2"
+            style="@style/edit_text"
+            android:fontFamily="@font/poppinsmedium"
+            android:padding="5dp"
+            android:shadowColor="@color/black"
+            android:elevation="5dp"
+
+            android:hint="Adress 2">
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/et_address3"
+            style="@style/edit_text"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppinsmedium"
+            android:hint="Adress 3"
+            android:padding="5dp"
+
+            android:shadowColor="@color/black">
+
+        </EditText>
+
+        <TextView
+            android:id="@+id/tv_create2"
+            android:layout_width="380dp"
+            android:layout_height="26dp"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppinssemibold"
+            android:text="Write a resume, up to 2000 words"
+            android:layout_marginLeft="20dp"
+            android:textSize="20dp" />
+
+        <EditText
+            android:id="@+id/et_curriculum"
+            style="@style/edit_text"
+            android:layout_height="279dp"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppinsmedium"
+            android:gravity="center|top"
+            android:hint="Resume"
+            android:maxLength="2000"
+            android:padding="5dp"
+            android:shadowColor="@color/black" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_cadastrar"
+            style="@style/containerComponents"
+            android:text="Sign up"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/poppinsregular"
+            android:layout_height="65dp"
+            android:elevation="100dp"
+            />
+    </LinearLayout>
 
 
-    <EditText
-        android:id="@+id/et_email"
-        android:elevation="5dp"
-        android:hint="E-mail"
-        android:inputType="textWebEmailAddress"
-        android:padding="5dp"
-        android:shadowColor="@color/black"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"/>
-
-
-    <EditText
-        android:id="@+id/et_password"
-        android:padding="5dp"
-        android:shadowColor="@color/black"
-        android:elevation="5dp"
-        android:hint="Password"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/black"
-        android:inputType="textPassword"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"/>
-
-    <EditText
-        android:id="@+id/et_telefone_create"
-        android:elevation="5dp"
-        android:hint="Phone"
-        android:inputType="number"
-        android:padding="5dp"
-        android:shadowColor="@color/black"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"/>
-
-
-    <EditText
-        android:id="@+id/et_address1"
-        android:padding="5dp"
-        android:shadowColor="@color/black"
-        android:elevation="5dp"
-        android:hint="Address 1"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"/>
-
-
-    <EditText
-        android:id="@+id/et_address2"
-        android:padding="5dp"
-        android:shadowColor="@color/black"
-        android:elevation="5dp"
-        android:hint="Address 2"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"/>
-
-    <EditText
-        android:id="@+id/et_address3"
-        android:padding="5dp"
-        android:shadowColor="@color/black"
-        android:elevation="5dp"
-        android:hint="Address 2"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"/>
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_cadastrar"
-        android:text="Cadastrar"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:layout_height="65dp"
-        android:elevation="100dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:layout_width="wrap_content"/>
-
-
-</LinearLayout>
+</ScrollView>
