--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,9 +17,7 @@
         <action
             android:id="@+id/action_LoginFragment_to_HomeFragment"
             app:destination="@+id/HomeFragment"/>
-        <action
-            android:id="@+id/action_LoginFragment_to_Notification"
-            app:destination="@+id/NotificationFragment"/>
+
     </fragment>
 
 
@@ -70,7 +68,7 @@
         android:id="@+id/RecyclerView"
         android:name="br.com.puccampinas.uteeth3pi.recyclerview.RecyclerViewFragment"
         android:label="Info"
-        tools:layout="@layout/list_view">
+        tools:layout="@layout/fragment_recycler_view">
 
 
     </fragment>
