--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue_200">#040957</color>
+    <color name="grey">#808080</color>
+    <color name="red">#ff3333</color>
 </resources>
