--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -9,14 +9,16 @@
     android:layout_marginTop="40dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
-    android:layout_marginBottom="16dp">
+    android:layout_marginBottom="16dp"
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginVertical="6dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
         
             <LinearLayout
                 android:layout_width="wrap_content"
