Update Dados - AccountDetailsFragment Funcionando

--- a/app/src/main/res/layout/fragment_account_details.xml
+++ b/app/src/main/res/layout/fragment_account_details.xml
@@ -143,7 +143,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:fontFamily="@font/poppinsmedium"
-                                        android:text="Pedro Lyra"
+                                        android:text=""
                                         android:textAlignment="viewEnd"
                                         android:textAllCaps="false"
                                         android:backgroundTint="@color/white"
@@ -195,7 +195,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:fontFamily="@font/poppinsmedium"
-                                        android:text="pedro.lyra@gmail.com"
+                                        android:text=""
                                         android:textAlignment="viewEnd"
                                         android:backgroundTint="@color/white"
                                         android:textColor="#808080"
@@ -247,7 +247,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:fontFamily="@font/poppinsmedium"
-                                        android:text="19991753723"
+                                        android:text=""
                                         android:textAlignment="viewEnd"
                                         android:textAllCaps="false"
                                         android:backgroundTint="@color/white"
