--- a/app/src/main/res/layout/fragment_home_menu.xml
+++ b/app/src/main/res/layout/fragment_home_menu.xml
@@ -161,11 +161,12 @@
                                 android:layout_gravity="center_horizontal"
                                 android:layout_margin="12dp">
 
-                                <ImageView
-                                    android:id="@+id/imageView4"
+                                <ImageButton
+                                    android:id="@+id/btn_liga"
                                     android:layout_width="58dp"
                                     android:layout_height="60dp"
                                     android:background="@drawable/oval_profile"
+                                    android:scaleType="centerCrop"
                                     android:src="@drawable/notification3"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
