--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -24,7 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp">
                 
                     <TextView
                         android:layout_width="wrap_content"
@@ -32,7 +33,7 @@
                         android:text="Nome:"
                         android:fontFamily="@font/poppinsmedium"
                         android:textColor="@color/black"
-                        android:textSize="26sp"
+                        android:textSize="20sp"
                         >
 
                     </TextView>
@@ -64,8 +65,9 @@
                 android:layout_height="wrap_content"
                 android:text="Número:"
                 android:textColor="@color/black"
-                android:textSize="26sp"
+                android:textSize="20sp"
                 android:fontFamily="@font/poppinsmedium"
+
                 >
 
             </TextView>
