--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -88,14 +88,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_uid"
-
-                >
-
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/tv_fcm"
 
                 >
@@ -105,9 +97,19 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_uid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/poppinsregular"
+            android:text="uid"
+            android:textColor="@color/black"
+            android:textSize="20sp"
 
+            >
 
-
+        </TextView>
 
 
     </LinearLayout>
